[package]
name = "puzzlescript"
version = "0.1.0"
authors = [
  "Francesco Mazzoli <f@mazzo.li>",
]
edition = "2018"
license = "ISC"

[dependencies]
glutin = "0.19.0"
structopt = "0.2"
gleam = "0.6.8"
failure = "0.1.3"
freetype-rs = "0.19.0"
nalgebra = "0.16.10"
image = "0.20.1"
lazy_static = "1.2.0"
im-rc = "12.2.0"

