[package]
name = "puzzlescript-core"
version = "0.1.0"
authors = [
  "Francesco Mazzoli <f@mazzo.li>",
]
edition = "2018"
license = "ISC"

[dependencies]
failure = "0.1.3"
lazy_static = "1.2.0"
serde_derive = "1.0.82"

[dependencies.serde]
version = "1.0.82"
features = ["rc"]

[dependencies.im-rc]
version = "12.2.0"
features = ["serde"]

[dev-dependencies]
serde_json = "1.0.34"
