[package]
name = "puzzlescript-glutin"
version = "0.1.0"
authors = [
  "Francesco Mazzoli <f@mazzo.li>",
]
edition = "2018"
license = "ISC"

[dependencies]
puzzlescript-core = { path = "../core" }
puzzlescript-render-gl = { path = "../render-gl" }
failure = "0.1.3"
gleam = "0.6.8"
glutin = "0.19.0"
structopt = "0.2"
serde_json = "1.0.33"
