[package]
name = "puzzlescript-render-gl"
version = "0.1.0"
authors = [
  "Francesco Mazzoli <f@mazzo.li>",
]
edition = "2018"
license = "ISC"

[dependencies]
puzzlescript-core = { path = "../core" }
failure = "0.1.3"
gleam = "0.6.8"
freetype-rs = "0.19.0"
nalgebra = "0.16.10"
image = "0.20.1"
# we pull this in solely for LogicalSize, remove it
winit = "0.18.0"
